# aegis-tracker

./: Cargo.toml  README.md  pyproject.toml  setup.py  test_sender.py
.github/workflows/: CI.yml
aegis/: __init__.py
aegis/core/: __init__.py  config.py  run.py
aegis/display/: __init__.py  renderer.py
aegis/hooks/: __init__.py  frameworks.py
aegis/metrics/: __init__.py  alerts.py  collector.py  system.py
aegis/storage/: __init__.py  artifacts.py  local_db.py
aegis/transport/: __init__.py  sender.py
aegis/utils/: __init__.py  ddp.py  env.py  timer.py  uid.py
pyarmor_runtime_000000/: __init__.py  pyarmor_runtime.pyd
python/aegis/: __init__.py  __init__.py.txt
python/aegis/core/: config.py  run.py
python/aegis/hooks/: __init__.py  frameworks.py
python/aegis/metrics/: system.py
python/aegis/transport/: sender.py
python/aegis/utils/: env.py  uid.py
python/aegis_core/: __init__.py
python/aegis_dist/: __init__.py
python/tests/: test_all.py
src/: lib.rs  sender.rs
