[package]
name = "aegis-tracker"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aegis_core"
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5.15"
pyo3 = "0.29.0"
serde = "1.0.228"
serde_json = "1.0.150"
sysinfo = "0.39.5"
ureq = "3.3.0"
