[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "aegis-tracker"
version = "0.2.1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["psutil"]

[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
python-source = "python"
module-name = "aegis.aegis_core"
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo"
]

include = ['aegis/**/*']
